// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages/Home/Components/MFAView should not render MoveBar if isEditing = false 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <img
      alt="Test Provider"
      class="image"
      src="www.testurl.com"
    />
    <div
      class="detail"
    >
      <div
        class="provider"
      >
        Test Provider
      </div>
      <div
        class="code"
      >
        012 345
      </div>
    </div>
    <div
      class="indicatorContainer"
    >
      <svg
        class="indicatorItem"
      >
        <circle
          class="circle"
          cx="20"
          cy="20"
          fill="none"
          r="14"
          stroke="gray"
          stroke-dasharray="87.96459430051421"
          stroke-dashoffset="87.96459430051421"
          stroke-width="2"
        />
      </svg>
      <div
        class="countdownLabel"
      >
        86400
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pages/Home/Components/MFAView should render correctly 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="moveButtonContainer"
    >
      <button
        class="moveButton"
        data-testid="moveup_button_0"
      >
        ⬆
      </button>
      <button
        class="moveButton"
        data-testid="movedown_button_0"
      >
        ⬇
      </button>
    </div>
    <img
      alt="Test Provider"
      class="image"
      src="www.testurl.com"
    />
    <div
      class="detail"
    >
      <div
        class="provider"
      >
        Test Provider
      </div>
      <div
        class="code"
      >
        012 345
      </div>
    </div>
    <div
      class="indicatorContainer"
    >
      <svg
        class="indicatorItem"
      >
        <circle
          class="circle"
          cx="20"
          cy="20"
          fill="none"
          r="14"
          stroke="gray"
          stroke-dasharray="87.96459430051421"
          stroke-dashoffset="87.96459430051421"
          stroke-width="2"
        />
      </svg>
      <div
        class="countdownLabel"
      >
        86400
      </div>
    </div>
  </div>
</DocumentFragment>
`;
